# Aegis

./: .gitignore  AGENTS.md  README.md  child-policy.md  opencode.json  pyproject.toml  render.yaml
audit-trail/: decisions.jsonl  narrative.md
docs/: advanced.md  architecture.md  demo.md  design.md  monitor.md  onboarding.md  risk-visualization.md  sample-decisions.jsonl  sample-report.md
docs/slides/: README.md  architecture.html  architecture.mmd  build_arch_slide.py  build_deck.py  child-safety-chatbot.pptx  system-architecture.pptx
mcp-servers/compliance-auditor/: child_safety_demo.py  core.py  demo.py  fairness.py  fairness_demo.py  llm_client.py  selftest.py  server.py  tamper_demo.py
mcp-servers/compliance-auditor/child_classifier/: __init__.py  audit.py  classifier.py  demo.py  patterns.py  scoring.py  test_classifier.py
monitor/: agent.py  app.py  strands_agent.py  strands_schemas.py  strands_tools.py  test_strands_rebuild.py
monitor-web/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
monitor-web/app/: layout.tsx  page.tsx
