[project]
name = "compliance-auditor"
version = "0.1.0"
description = "Tamper-evident oversight gate for AI-assisted coding (AESIA challenge)"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
# Optional "surface facts, not verdicts" layer — only needed for fairness_scan.
# Install with: uv sync --extra fairness
fairness = ["fairlearn>=0.10", "pandas>=2.0"]
# Demo monitor web server (monitor/app.py): uv sync --extra server
server = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0"]
# Strands-based agent backend (monitor/strands_agent.py): uv sync --extra strands
# Bedrock support comes bundled in strands-agents itself (boto3 dependency);
# Ollama needs a separately running `ollama serve` process, no extra pip package.
strands = ["strands-agents>=0.1.0"]

# The auditor core (core.py) is pure stdlib and needs none of these — only the
# MCP server wrapper (server.py) imports `mcp`. Managed with uv per project reqs:
#   uv sync                 # create .venv from this file
#   uv run python mcp-servers/compliance-auditor/server.py